Fix the inconsistent behavior of the caret on text controls when their readonly attribute is changed, b=235294, r+sr=bzbarsky